feat: property api docs
